log
Fri 28 Mar 2025 02:43:13 PM UTC: 
 list.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
25021aa
Fri 28 Mar 2025 02:56:54 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
8e02c95
Fri 28 Mar 2025 02:59:29 PM UTC: 
 list.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  6|4
total_score: 25/70
4497872
Fri 28 Mar 2025 03:01:42 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  6|4
total_score: 25/70
dfb5658
Fri 28 Mar 2025 03:04:49 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
416db6c
Sat 29 Mar 2025 11:11:08 PM UTC: 
 list.c | 14 +++++++++++---
 1 file changed, 11 insertions(+), 3 deletions(-)
 tests:  9|3
total_score: 35/70
19b31d9
Sat 29 Mar 2025 11:23:55 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
2f26439
Sat 29 Mar 2025 11:42:21 PM UTC: 
 list.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
6deafe4
Sat 29 Mar 2025 11:52:53 PM UTC: 
 list.c | 28 ++++++++++++++++++++--------
 1 file changed, 20 insertions(+), 8 deletions(-)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:111:12: error: unused variable ‘data’ [-Werror=unused-variable]
  111 |     void * data = list->current->data;
      |            ^~~~
cc1: all warnings being treated as errors
Compilation failed
83bda5e
Sat 29 Mar 2025 11:57:10 PM UTC: 
 list.c | 18 +++++++-----------
 1 file changed, 7 insertions(+), 11 deletions(-)
 tests:  0|0
80962fd
Sat 29 Mar 2025 11:58:31 PM UTC: 
 list.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
 tests:  0|0
14e74e8
Sun 30 Mar 2025 12:07:58 AM UTC: 
 list.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  0|0
a481ba2
Sun 30 Mar 2025 12:18:00 AM UTC: 
 list.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  0|0
d17b6ae
Sun 30 Mar 2025 12:19:24 AM UTC: 
 list.c | 16 ++++++++--------
 1 file changed, 8 insertions(+), 8 deletions(-)
 tests:  0|0
3dd1d69
Sun 30 Mar 2025 12:20:07 AM UTC: 
 list.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
 tests:  0|0
64947be
Sun 30 Mar 2025 12:22:55 AM UTC: 
 list.c | 14 --------------
 1 file changed, 14 deletions(-)
 tests:  11|1
total_score: 55/70
69e4d99
Sun 30 Mar 2025 12:26:47 AM UTC: 
 list.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  0|0
2a3e899
Sun 30 Mar 2025 12:28:03 AM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
83e44be
Sun 30 Mar 2025 12:45:51 AM UTC: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:122:16: error: ‘data’ undeclared (first use in this function)
  122 |         return data;
      |                ^~~~
list.c:122:16: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
af2d194
Sun 30 Mar 2025 12:46:20 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
4ef315b
Sun 30 Mar 2025 12:48:40 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:122:19: error: dereferencing ‘void *’ pointer [-Werror]
  122 |         return aux->data;
      |                   ^~
list.c:122:19: error: request for member ‘data’ in something not a structure or union
cc1: all warnings being treated as errors
Compilation failed
9e88588
Sun 30 Mar 2025 12:48:54 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
9483c7f
Sun 30 Mar 2025 12:50:02 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:133:12: error: pointer ‘aux’ used after ‘free’ [-Werror=use-after-free]
  133 |     return aux;
      |            ^~~
list.c:132:5: note: call to ‘free’ here
  132 |     free(aux);
      |     ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
b11e181
Sun 30 Mar 2025 12:50:32 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
ccabaf0
Sun 30 Mar 2025 12:51:40 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
da8581f
Sun 30 Mar 2025 12:53:13 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
ed24a08
Sun 30 Mar 2025 12:57:28 AM UTC: 
 list.c | 14 +++-----------
 1 file changed, 3 insertions(+), 11 deletions(-)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:125:15: error: pointer ‘aux’ used after ‘free’ [-Werror=use-after-free]
  125 |     return aux->data;
      |            ~~~^~~~~~
list.c:123:5: note: call to ‘free’ here
  123 |     free(aux);
      |     ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
6539174
